data/derived/comb/progs/unify/prog1154.ml.out
Characters 28-32:
  let f a x = (+)a*a in
              ^^^^
Error: This expression has type int -> int
       but an expression was expected of type int
